# SDL_GAME

./: .gitignore  CMakeLists.txt  README.md
include/: ground.hpp  stick_figure.hpp  window.hpp
src/: ground.cpp  main.cpp  stick_figure.cpp  window.cpp
